--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -19,12 +19,28 @@
 .dropDownExpand {
   width: 100%;
   @media only screen and (min-width: $largeDevice) {
-  width: 540px;
+  width: 480px;
   }
 }
 // STYLING: WIDTH OF DROPDOWN MENU ITEMS
 .tags {
-  width: 165px;
+  width: 140px;
+  font-size: 14px;
+  @media only screen and (min-width:  $mobileSDevice) {
+    font-size: 16px;
+    width: 165px;
+  }
+    @media only screen and (min-width:  $mobileMDevice) {
+      font-size: 16px;
+      width: 192px;
+    }
+    @media only screen and (min-width: $tabletteDevice) {
+      width: 220px;
+    }
+    @media only screen and (min-width:  $largeDevice) {
+      width: 145px;
+      font-size: 14px;
+    }
 }
 
 /*
@@ -41,8 +57,8 @@ font-size: 18px;
   }
 }
 
-.recipes {
-  
+.searchFilters {
+  position: absolute;
   z-index: 999;
     @media only screen and (min-width: $largeDevice) {
       flex-wrap: nowrap;
@@ -51,11 +67,12 @@ font-size: 18px;
 
 // RECIPE CARDS STYLING
 .cards{
-
+  position: relative;
   padding: unset;
+  top: 150px;
    /* margin: -6px;*/
     @media only screen and (min-width: $largeDevice) {
-    top: 70px;
+    top: 55px;
   }
 }
 
